Constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireHPA
metadata:
  name: require-hpa-for-deployments-and-statefulsets
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
  parameters:
    message: "Given the application is set to scale, for higher environments you must set HPA minimum replica to greater than 1"
