hpa-replicas.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: hpa-replica-constraint
spec:
  crd:
    spec:
      names:
        kind: HPAReplicaConstraint
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package hpa

        violation[{"msg": msg}] {
          input.review.object.kind == "Deployment"  # Check for Deployment
          deployment := input.review.object

          input.review.object.kind == "StatefulSet"  # Check for StatefulSet
          statefulSet := input.review.object

          # Check if HPA is present
          (hpa := deployment.metadata.annotations["autoscaling.alpha.kubernetes.io/current-metrics"]) {
            # Validate minimum HPA replica
            minReplicas := tonumber(deployment.metadata.annotations["autoscaling.alpha.kubernetes.io/minReplicas"])

            (minReplicas == 1) {
              msg := "Given the application is set to scale, for higher environments you must set HPA minimum replica to be greater than 1."
            }
          } else {
            msg := "There is no HPA present. For higher environment usage, please consider adding one."
          }
        }
