require-hpa-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: hpa-replica-constraint
spec:
  crd:
    spec:
      names:
        kind: HPAReplicaConstraint
      validation:
        # Add any additional validation schema here if required
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package hpa_replica_check

        deny[msg] {
          deploymentOrStatefulSet
          minReplicas := input.parameters.minReplicas
          minReplicas < 2
          msg := sprintf("Given the application is set to scale, for higher environments you must set HPA minimum replica to be greater than 1.")
        }

        warn[msg] {
          deploymentOrStatefulSet
          not hasHPA
          msg := sprintf("There is no HPA present. For higher environment usage, please consider adding one.")
        }

        deploymentOrStatefulSet {
          deployment := input.request.object
          deployment.kind == "Deployment"
          statefulSet := null
        }

        deploymentOrStatefulSet {
          statefulSet := input.request.object
          statefulSet.kind == "StatefulSet"
          deployment := null
        }

        hasHPA {
          deploymentOrStatefulSet
          hasHPA = true
        }

        hasHPA = false {
          deploymentOrStatefulSet
          hasHPA := 0
        }
